--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,178 @@
+/*
+-----------------------------------
+-----------------------------------
+
+GLOBAL RULES
+
+-----------------------------------
+-----------------------------------
+
+*/
+
+@font-face {
+    font-family: CourierPrime;
+    src: url(fonts/CourierPrime.ttf);
+    font-weight: normal;
+}
+
+@font-face {
+  font-family: CourierPrime;
+  src: url(fonts/CourierPrimeBold.ttf);
+  font-weight: bold;
+}
+
+html, body{
+  font-size: 1em;
+  line-height: 1.2em;
+}
+
+
+
+
+
+
+
+
+/*
+-----------------------------------
+-----------------------------------
+
+PRINT MEDIA RULES
+
+-----------------------------------
+-----------------------------------
+
+*/
+
+@media print {
+
+  .container-fluid{
+    margin: 0 auto;
+  }
+
+  .header{
+    display: none;
+  }
+
+  .break{
+    display: none;
+  }
+
+
+  page{
+    width: 21cm;
+    height: 29.7cm;
+    background: white;
+    display: block;
+    margin: 0 auto;
+    page-break-after: always;
+  }
+
+
+  .script {
+    font-family: CourierPrime, monospace !important;
+    color: #212121 !important;
+    overflow-y:auto;
+    background-color: #f7f7f7;
+    box-shadow: 0 0 0.2cm rgba(0,0,0,0.5);
+    padding: 80px 40px;
+  }
+
+
+  .scene-heading {
+    text-align: left;
+    text-transform: uppercase;
+  }
+
+  .edit:focus {
+    outline: 0
+  }
+
+  .title{
+    text-align: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .intro{
+    padding-top: 25px;
+    padding-bottom: 25px;
+    margin-left: 12%;
+    margin-right: 12%;
+  }
+
+  .main{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left: 8%;
+    margin-right: 8%;
+  }
+
+  .character, .transition, .super{
+    text-transform: uppercase;
+  }
+
+  .super{
+    font-weight: bold;
+  }
+
+  .super-content{
+    text-align: center;
+    font-weight: bold;
+  }
+
+  .transition{
+    padding-top: 5px;
+    text-align: right;
+    padding-bottom: 5px;
+  }
+
+  .speak{
+    text-align: center;
+  }
+
+  .break{
+    width: 100%;
+    height: 20px;
+  }
+
+  .title-page{
+    text-align: center;
+    vertical-align: middle;
+    padding-top: 50%;
+  }
+
+  .speaker{
+    text-align: center;
+  }
+
+  .dialogue{
+    text-align: center;
+  }
+
+
+}
+
+
+
+
+
+
+
+
+/*
+-----------------------------------
+-----------------------------------
+
+SCREEN MEDIA RULES
+
+-----------------------------------
+-----------------------------------
+
+*/
+
+@media screen{
+
 html, body{
   overflow-x: hidden;
   /*font-family: 'Inconsolata', monospace !important;*/
@@ -20,9 +195,9 @@ html, body{
 }
 
 hr {
-  border: 0;
+  /*border: 0;
   height: 1px;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));*/
 }
 
 .divider{
@@ -56,8 +231,6 @@ page{
   background: white;
   display: block;
   margin: 0 auto;
-  margin-bottom: 0.5cm;
-  box-shadow: 0 0 0.5cm rgba(0,0,0,0.5);
   page-break-after: always;
 }
 
@@ -105,7 +278,6 @@ box-shadow: 0;
 
 
 
-
 /*
 -----------------------------------
 
@@ -117,34 +289,27 @@ SCRIPT RELATED RULES
 
 
 .script {
-  font-family: 'Cutive Mono', monospace !important;
+  font-family: CourierPrime, monospace !important;
   color: #212121 !important;
   border: 1px solid #dbdbdb;
   border-right: 1px solid #dbdbdb;
   overflow-y:auto;
   background-color: #f7f7f7;
   box-shadow: 0 0 0.2cm rgba(0,0,0,0.5);
-  padding-left: 40px;
-  padding-right: 40px;
+  padding: 80px 40px;
 }
 
 
 .scene-heading {
-  text-align: left
+  text-align: left;
+  text-transform: uppercase;
 }
 
 .edit:focus {
   outline: 0
 }
 
-.title{
-  text-align: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
-
 .intro{
-  text-align: left;
   padding-top: 25px;
   padding-bottom: 25px;
   margin-left: 15px;
@@ -152,29 +317,27 @@ SCRIPT RELATED RULES
 }
 
 .main{
-  text-align: left;
   padding-top: 20px;
   padding-bottom: 20px;
-  margin-left: 30px;
-  margin-right: 30px;
 }
 
-.character, .transition, .act{
+.character, .transition, .super{
   text-transform: uppercase;
 }
 
-.act{
-  text-decoration: underline;
+.super{
+  font-weight: bold;
+}
+
+.super-content{
   text-align: center;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  font-weight: bold;
 }
 
 .transition{
   padding-top: 5px;
   text-align: right;
   padding-bottom: 5px;
-  width: 90%;
 }
 
 .speak{
@@ -183,5 +346,23 @@ SCRIPT RELATED RULES
 
 .break{
   width: 100%;
-  height: 100px;
+  height: 20px;
 }
+
+.title-page{
+  text-align: center;
+  vertical-align: middle;
+  padding-top: 50%;
+}
+
+.speaker{
+  text-align: center;
+}
+
+.dialogue{
+  text-align: center;
+}
+
+
+}
+/*} end of @media*/
