--- a/css/style.css
+++ b/css/style.css
@@ -180,15 +180,15 @@ html, body{
   overflow-x: hidden;
   /*font-family: 'Inconsolata', monospace !important;*/
   /*maybe try Actor*/
-  background-color: #eaeaea;
+  background-color: #000000;
   color: #212121;
   max-height: 100vh;
   font-family: 'Josefin Sans', sans-serif;
-  -webkit-transition: all .3s ease-out;
-  -moz-transition: all .3s ease-out ;
-  -ms-transition: all .3s ease-out ;
-  -o-transition: all .3s ease-out ;
-  transition: all .3s ease-out ;
+  -webkit-transition: all 0.8s ease-out;
+  -moz-transition: all 0.8s ease-out ;
+  -ms-transition: all 0.8s ease-out ;
+  -o-transition: all 0.8s ease-out ;
+  transition: all 0.8s ease-out ;
 }
 
 .container-fluid{
@@ -211,7 +211,6 @@ hr {
 
 .navbar{
   padding-top: 5px;
-  background-color: transparent;
   text-align: center;
   padding-left: 30px;
   padding-right: 30px;
@@ -219,11 +218,17 @@ hr {
 }
 
 .navbar-default{
-  background-color: transparent;
+  background-color: rgba(122,122,122,0.5);
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 
-.switch{
-  color: #212121;
+.switch, .print{
   opacity: 0.7;
 }
 
@@ -231,7 +236,6 @@ hr {
 page{
   width: 21cm;
   height: 29.7cm;
-  background: white;
   display: block;
   margin: 0 auto;
   page-break-after: always;
@@ -260,20 +264,6 @@ page{
 }
 
 
-/*
-@media print {
-#nav{
-display: none;
-}
-page {
-display: block;
-margin: 0;
-box-shadow: 0;
-}
-
-}*/
-
-
 
 
 
@@ -297,7 +287,6 @@ SCRIPT RELATED RULES
   border: 1px solid #dbdbdb;
   border-right: 1px solid #dbdbdb;
   overflow-y:auto;
-  background-color: #f7f7f7;
   box-shadow: 0 0 0.2cm rgba(0,0,0,0.5);
   padding: 80px 30px;
 }
